syntax = "proto3";

package handler;

option go_package = "proto/handler";

message GetURLRequest {
  string url_hash = 1;
}

message GetURLResponse {
  string url = 1;
  string error = 2;
}

message ShortenURLRequest {
  string url = 1;
}
  
message ShortenURLResponse {
  string url = 1;
  string error = 2;
}

message Empty {}

message RegisterResponse {
  string auth_token = 1;
}

message URL {
  string original_url = 1;
  string correlation_hash = 2;
  string short_url = 3;
}

message URLForList {
  string short_url = 1;
  string original_url = 2;
}

message ShortenURL {
  string correlation_hash = 1;
  string short_url = 2;
}

message ShortenBatchURLRequest {
  repeated URL urls = 1;
}

message ShortenBatchURLResponse {
  repeated ShortenURL urls = 1;
  string error = 2;
}

message PingResponse {
  string status = 1;
}

message GetStatsResponse {
  string users = 1;
  string urls = 2;
}

message DeleteListURLRequest{
  repeated string hashes = 1;
}

message GetListURLResponse {
  repeated URLForList urls = 1;
  string error = 2;
}

service URLShortener {
  rpc GetURL(GetURLRequest) returns (GetURLResponse);
  rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
  rpc ShortenBatchURL(ShortenBatchURLRequest) returns (ShortenBatchURLResponse);
  rpc Ping(Empty) returns (PingResponse);
  rpc GetStats(Empty) returns (GetStatsResponse);
  rpc GetListURL(Empty) returns (GetListURLResponse);
  rpc DeleteListURL(DeleteListURLRequest) returns (Empty);
} 
